# agentUniverse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_zh.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_PYPI.md  README_jp.md  README_zh.md  au_dir_structure_updater.py  pyproject.toml
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: config.yml  issue_template-bug.yaml  issue_template-feature.yaml  issue_template-question.yaml
agentuniverse/: __init__.py
agentuniverse/agent/: agent.py
agentuniverse/agent/action/: __init__.py
agentuniverse/agent/default/: __init__.py
agentuniverse/agent/memory/: __init__.py  enum.py  memory.py  message.py
agentuniverse/agent/template/: __init__.py  agent_template.py  contextual_iteration_agent_template.py  default_summarize_agent_template.py  executing_agent_template.py  openai_protocol_template.py  rag_agent_template.py  react_agent_template.py  slave_rag_agent_template.py
agentuniverse/agent/work_pattern/: __init__.py
agentuniverse/agent_serve/: service.py  service_instance.py
agentuniverse/agent_serve/web/: __init__.py  flask_server.py  gunicorn_server.py  post_fork_queue.py  request_task.py  thread_with_result.py
agentuniverse/base/: __init__.py  agentuniverse.py
agentuniverse/base/annotation/: __init__.py  retry.py  trace.py
agentuniverse/base/component/: __init__.py  application_component_manager.py  component_base.py  component_configer_util.py  component_enum.py  component_manager_base.py
agentuniverse/base/config/: __init__.py  configer.py
agentuniverse/base/context/: __init__.py  context_archive_utils.py  context_coordinator.py  framework_context_manager.py  mcp_session_manager.py
agentuniverse/base/tracing/: au_trace_context.py  au_trace_manager.py
agentuniverse/base/util/: __init__.py  agent_util.py  async_util.py  character_util.py  common_util.py  env_util.py  memory_util.py  prompt_util.py  reasoning_output_parse.py  system_util.py
agentuniverse/database/: __init__.py
agentuniverse/llm/: __init__.py  claude_langchain_instance.py  llm.py  llm_manager.py  llm_output.py  openai_style_langchain_instance.py  openai_style_llm.py  wenxin_langchain_instance.py
agentuniverse/llm/default/: __init__.py  aws_bedrock_llm.py  aws_bedrock_llm.yaml  baichuan_openai_style_llm.py  baichuan_openai_style_llm.yaml  claude_llm.py  claude_llm.yaml  deep_seek_openai_style_llm.py  default_ollama_llm.py  gemini_openai_style_llm.py  gemini_openai_style_llm.yaml  kimi_openai_style_llm.py  qwen_openai_style_llm.py  qwen_openai_style_llm.yaml  wenxin_llm.py  wenxin_llm.yaml  zhipu_openai_style_llm.yaml
agentuniverse/llm/llm_channel/: __init__.py  baichuan_official_llm_channel.py  claude_official_llm_channel.py  dashscope_llm_channel.py  deepseek_official_llm_channel.py  gemini_official_llm_channel.py  kimi_official_llm_channel.py  llm_channel.py  llm_channel_manager.py  ollama_llm_channel.py  openai_official_llm_channel.py  qianfan_llm_channel.py  zhipu_official_llm_channel.py
agentuniverse/prompt/: __init__.py  chat_prompt.py
agentuniverse/workflow/: __init__.py
agentuniverse/workflow/graph/: __init__.py
agentuniverse/workflow/node/: __init__.py  llm_node.py  node_config.py
agentuniverse_extension/: __init__.py
agentuniverse_extension/logger/: __init__.py  sls_sink.py
agentuniverse_extension/logger/log_sink/: __init__.py  base_sls_log_sink.py  custom_agent_first_token_sink.yaml  custom_agent_input_sink.yaml  custom_agent_output_sink.yaml  custom_flask_request_sink.yaml  custom_flask_response_sink.py  custom_flask_response_sink.yaml  custom_llm_input_sink.yaml  custom_llm_output_sink.yaml
agentuniverse_product/: __init__.py  agentuniverse_product.py
agentuniverse_product/dal/: __init__.py  message_library.py  session_library.py
agentuniverse_product/service/: __init__.py
dataset/: README.md  README_ZH.md
examples/methane_city_test/: README.md  run_methane_city_test.py
examples/methane_expert_app/: README.md
examples/sample_apps/: __init__.py  sevenzip_reader_demo.py
examples/sample_standard_app/: README.md
examples/startup_app/: __init__.py
examples/third_party_examples/: README.md
examples/third_party_examples/apps/prompt_generator_app/app/: .gitignore  README.md  README_zh.md  pyproject.toml  run_example.py  run_optimizer_example.py  run_tests.py
examples/third_party_examples/apps/prompt_generator_app/app/intelligence/service/agent_service/: __init__.py  prompt_service.py
examples/third_party_examples/apps/prompt_generator_app/app/intelligence/service/classic_service/: template_service.py
examples/third_party_examples/apps/prompt_generator_app/app/intelligence/test/: __init__.py  prompt_generator.py  prompt_optimizer.py  test_prompt_generator.py  test_prompt_optimizer.py
examples/third_party_examples/apps/prompt_generator_app/app/intelligence/utils/common/: prompt_util.py  yaml_util.py
tests/test_agentuniverse_extension/: __init__.py
(+1112 files in other folders)
